--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@clerk/themes": "^2.1.18",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^5.16.6",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "crypto-js": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.5",
     "svix": "^1.28.0"
   },
